<resources>
    <string name="app_name">MyHelpAndFeedback</string>
    <string name="fragment_help">帮助</string>
    <string name="fragment_feedback">问题反馈</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_draw_color">drawColor()</string>
    <string name="title_draw_circle">drawCircle()</string>
    <string name="title_draw_rect">drawRect()</string>
    <string name="title_draw_point">drawPoint()</string>
    <string name="title_draw_oval">drawOval()</string>
    <string name="title_draw_line">drawLine()</string>
    <string name="title_draw_round_rect">drawRoundRect()</string>
    <string name="title_draw_arc">drawArc()</string>
    <string name="title_draw_path">drawPath()</string>
    <string name="title_draw_histogram">直方图</string>
    <string name="title_draw_pie_chart">饼图</string>
</resources>
